Mutex protection added for loading plugins. (BUG#33345)

sql/sql_plugin.cc:
  Mutex protection added for loading plugins.